# VeOmni

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  README_uv.md  pyproject.toml  train.sh
.agents/knowledge/: architecture.md  constraints.md  multimodal_metadata.md  uv.md
.agents/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ascend-npu.yml  bug-report.yml  feature-request.yml
.github/workflows/: README.md  auto-add-ascend-label.yml  auto_label_issue_and_pr.yml  check_docker_generate.yml  check_patchgen.yml  check_pr_lint.yml  check_pr_title.yml  device_api_check.yml  docker-build-ascend-a2.yml  docker-build-ascend-a3.yml  gpu_e2e_test.yml  gpu_unit_tests.yml  issue_labeler.yml  npu_e2e_test.yml  npu_unit_tests.yml  pre-commit.yml
configs/dit/: flux_lora.yaml  flux_sft.yaml  qwen_image_lora.yaml  qwen_image_sft.yaml  wan2.1_I2V_1.3B_lora.yaml  wan_lora.yaml  wan_sft.yaml
configs/pretrain/: deepseek.yaml  llama3.yaml  qwen2_5.yaml  qwen3-moe.yaml  seed_oss.yaml
configs/sft/: deepseek_sft.yaml  qwen3_sft.yaml
configs/text/: deepseek.yaml  deepseek_v3_lora.yaml  llama3.yaml  qwen2_5.yaml  qwen3-moe.yaml  qwen3.yaml  qwen3_5_sft.yaml  qwen3_dpo.yaml  qwen3_lora.yaml  qwen3_moe_lora.yaml  qwen3_moe_muon.yaml  seed_oss.yaml
docker/: README.md  generate.py  matrix.yaml
docker/ascend/: Dockerfile.ascend_8.3.rc2_a2  Dockerfile.ascend_8.3.rc2_a2.x86  Dockerfile.ascend_8.3.rc2_a3  Dockerfile.ascend_8.3_rc2_a2  Dockerfile.ascend_9.0.0_a2.arm  Dockerfile.ascend_9.0.0_a2.x86  Dockerfile.ascend_9.0.0_a3
docker/cuda/: Dockerfile.cu128  Dockerfile.cu129  Dockerfile.cu130
docker/rocm/: Dockerfile.ROCm7.14
docker/templates/: ascend.Dockerfile.j2  cuda.Dockerfile.j2
docs/: README.md  conf.py  index.md  index.rst  requirements.txt  testing.md
docs/config/: config.md
docs/design/: patchgen.md  unified_kernel_registry.md  verl_topk_distill_integration.md
docs/examples/: generate_wan_dataset.py  qwen3.md  qwen3_5.md  qwen3_moe.md  qwen3_omni_moe.md  qwen3_omni_offline_av.md  qwen3_vl.md  wan2.1.md
docs/hardware_support/: FAQ.md  ascend_environment_variables.md  get_started_npu.md  npu_variables.md  precision_analysis.md  profiling_analysis.md  typical_usage.md
docs/key_features/: ep_fsdp2.md  extra_parallel.md  lora.md  model_loader.md  preprocessor_registry.md  ulysses.md
docs/start/: ascend_start_en.md  best_practice.md  uv.md
docs/transformers_v5/: index.md  patchgen.md  testing_new_model.md  transformers_v5_moe_weight_loading.md  veomni_flash_attention_kernel_adapter.md
docs/tutorials/: enable_new_models.md  ep_fsdp2.md  model_loader.md  preprocessor_registry.md
docs/usage/: arguments.md  basic_modules.md  checkpoint_conversion.md  data_packing_and_dyn_bsz.md  rmpad_with_pos_ids_and_dyn_bsz.md  support_new_models.md
patchgen-pkg/: README.md  build.sh  pyproject.toml
patchgen-pkg/patchgen/: __init__.py  __main__.py  _normalize.py  check_patchgen.py  cli.py  codegen.py  patch_spec.py  run_codegen.py
scripts/: mereg_dcp_to_hf.py  merge_dcp_to_hf.py  trim_safetensor_layers.py
scripts/deepseek_v3/: fp8_cast_bf16.py
scripts/inference/: infer_omni.py  infer_qwen_image.sh  infer_wan.sh
scripts/moe_ckpt_merge/: moe_merge.py  moe_spilt.py
scripts/profile/: merge_chrome_trace.py
tasks/: data_sim.py  infer.py  train_torch.py
tasks/data/: vlm_data_process.py
tasks/deprecated_task/: train_flux.py  train_qwen_vl.py  train_torch.py  train_wan.py
tasks/omni/: infer_omni_model.py  infer_qwen2_vl.py  train_flux.py  train_omni_model.py  train_qwen25_omni.py  train_qwen2_5_vl.py  train_qwen2_vl.py  train_qwen3_omni.py  train_qwen_vl.py  train_wan.py
tests/checkpoints/: checkpoint_verification_utils.py  ep4.yaml  ep8.yaml  no_ep.yaml  test_checkpoint_callback.py  test_dcp_checkpointer.py  test_trainer_saveload.py  utils.py
tests/data/: test_collators.py  test_dataloader.py  test_dynamic_batching_dataset.py  test_mm_metadata.py  test_multisource_dataset.py  test_multisource_datasets.py  test_native_datasets.py  test_prepare_fa_kwargs.py  test_preprocessor.py  test_preprocessor_registry.py  test_rmpad_with_pos_ids_without_dyn_bsz.py  test_seqcls_collators.py  utils.py
tests/distributed/: launch.py  test_dummy_forward.py  test_fsdp_equivalence.py  test_init_distributed.py  test_save_load.py  test_torch_compile.py  utils.py
tests/e2e/: exec_scripts.py  test_e2e_parallel.py  test_e2e_training.py  test_e2e_training_no_reshard.py  utils.py
tests/lora/: qwen3_moe_toy_lora_independent.yaml  qwen3_moe_toy_lora_shared.yaml  qwen3_toy_lora.yaml  test_lora_trainer_saveload.py  test_moe_lora_eager.py  test_moe_lora_ep2.py  test_moe_lora_fused.py  test_moe_lora_trainer.py  test_target_mapping.py  test_veomni_lora_moe_native.py  test_veomni_lora_native.py  utils.py
tests/model_config/: qwen25_toy.json  qwen25vl_toy.json  qwen3moe_toy.json
tests/models/: test_checkpoint_tensor_converter.py  test_gpt_oss_integration.py  test_model_forward_no_implicit_sync.py  test_model_registry.py  test_models.py  test_models_logits_equal.py  test_models_logits_equal_v5.py  test_models_patch.py  test_moe_router_replay_invariants.py  test_moe_v4_runtime_merge.py  test_padded_packed_loss.py  test_return_log_probs_e2e.py  test_vlm_trainer.py  utils.py  weight_sync_adapters.py
tests/ops/: test_chunk_topk_distill.py  test_comp.py  test_deepseek_sparse_attention.py  test_eager_kernels_cpu.py  test_expert_scatter_index.py  test_flash_attn_varlen_padding.py  test_fused_moe_split_vs_merged.py  test_gdn_ascend_gate.py  test_gpt_oss_fa4_attention.py  test_kernel_registry_numerical.py  test_kernel_registry_sanity.py  test_moe_hw_gate.py  test_npu_kernels.py  test_npu_kernels_extended.py  test_quack_fused_moe.py  test_seqcls_loss.py
tests/optim/: test_muon_fsdp2_parity.py  test_muon_fsdp2_smoke.py  test_muon_unit.py  test_optimizer_vlm_param_groups.py
tests/special_sanity/: check_device_api_usage.py
tests/special_senity/: check_device_api_usage.py
tests/tools/: __init__.py  common_utils.py  (+2 more)
veomni/: __init__.py  _version.py
(+457 files in other folders)
