[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/ByteDance-Seed/VeOmni"
"Source Code" = "https://github.com/ByteDance-Seed/VeOmni"

[project]
name = "veomni"
dynamic = ["version"]
description = "VeOmni: Scaling any Modality Model Training to any Accelerators with PyTorch native Training Framework"
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { file = "LICENSE" }
authors = [
  { name="ByteDance-Seed", email="doubao-llm@bytedance.com" },
]

dependencies = [
  "blobfile>=3.0.0",
  "datasets>=2.20.0,<=2.21.0",
  "packaging>=23.0,<26.0",
  "torchdata>=0.8.0,<1.0",
  "tiktoken>=0.9.0",
  # transformers is pinned by the `transformers-stable` dependency group for
  # uv users; pip users should `pip install transformers==5.9.0` themselves.
  "psutil",
  "timm",
  "wandb",
  "setuptools",
  "einops>=0.8.1",
  "matplotlib>=3.7",  # veomni.utils.moe_monitor expert-load heatmap
]

[project.optional-dependencies]
# Three mutually-exclusive hardware extras (see `[tool.uv].conflicts`): a
# typical install is `uv sync --extra <gpu|npu|npu_aarch64>`. trl is NOT
# included — VeOmni's DPO trainer (veomni/trainer/text_dpo_trainer.py) is
# from-scratch and the trl<=0.9.6 pin is transformers v4-era anyway.
dev = [
  "pre-commit>=4.0.0,<5.0",
  "ruff>=0.7.0,<1.0",
  "pytest>=6.0.0,<8.0",
  "expecttest>=0.3.0,<0.4"
]

gpu = [
  "torch==2.11.0+cu130",
  "torchvision==0.26.0+cu130",
  "torchaudio==2.11.0+cu130",
  "torchcodec==0.12.0",
  "nvidia-cusparselt-cu13",
  "nvidia-nccl-cu13",
  "nvidia-cutlass-dsl>=4.4.2",
  # cuDNN Frontend DSA kernels for DeepSeek sparse attention training. Avoid the
  # `cutedsl` extra because it pins nvidia-cutlass-dsl==4.5.0, which conflicts with FA4.
  "nvidia-cudnn-frontend>=1.24.0",
  "cuda-python==13.0.3",
  # See `[tool.uv.sources]` — FA2 (cp311/cp312), FA3 (sm90 abi3), and
  # FlashMLA (cp311/cp312 sm90a/sm100f) install from prebuilt wheels;
  # flash-qla source-builds from git.
  "flash-attn",
  "flash-attn-3",
  "flash-mla",
  # 4.0.0b16 is available from PyPI; newer fa4-v4.0.0.beta17 is tag-only
  # and not yet published as a package release.
  "flash-attn-4==4.0.0b16",
  "flash-qla",
  "liger-kernel",
  "flash-linear-attention",
  "quack-kernels[cu13]==0.5.0",
  "torch-c-dlpack-ext",
  "apache-tvm-ffi==0.1.9",
  "av>=14.3.0,<15.0; python_version == '3.11'",
  "av>=14.0.0,<14.3; python_version == '3.12'",
  "librosa>=0.11.0,<0.12",
  "soundfile>=0.13.1,<0.14",
  "diffusers==0.37.0",
  "ftfy",
  "peft==0.18.1",
  "megatron-energon>=7.2.1",
  "hf_transfer",
]

# Ascend NPU x86_64 — superset minus CUDA-only kernels (FA2/3/4, FlashQLA).
npu = [
  "torch==2.7.1+cpu",
  "torch-npu==2.7.1",
  "torchvision==0.22.1+cpu",
  "torchaudio==2.7.1+cpu",
  "torchcodec>=0.4.0,<0.6.0",
  "decorator>=5.2.1",
  "scipy>=1.16.2",
  "av>=14.3.0,<15.0; python_version == '3.11'",
  "av>=14.0.0,<14.3; python_version == '3.12'",
  "librosa>=0.11.0,<0.12",
  "soundfile>=0.13.1,<0.14",
  "diffusers==0.37.0",
  "ftfy",
  "peft==0.18.1",
  "megatron-energon>=7.2.1",
  "hf_transfer",
]

# aarch64 NPU — torch + torch-npu only; av/torchcodec/librosa/soundfile lack
# aarch64 wheels (see `[tool.uv.sources].av`, x86_64-only).
npu_aarch64 = [
  "torch==2.7.1",
  "torch-npu==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "decorator>=5.2.1",
  "scipy>=1.16.2",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "patchgen"},
]
lint = [
  "pre-commit",
  "ruff",
]
test = [
  "rich",
  "pytest",
  "expecttest",
]
# Sibling project under ./patchgen-pkg/ (build-time tool — regenerates
# veomni/models/transformers/*/generated/; not imported at runtime).
# Outer dir is `patchgen-pkg` because a flat `patchgen/` would shadow the
# editable install via namespace-package discovery.
patchgen = [
  "patchgen>=0.1.0",
]
# In default-groups so `uv sync` always installs transformers==5.9.0.
# Kept out of [project.dependencies] so pip users are not forced into a
# specific 5.x patch release.
transformers-stable = [
  "transformers==5.9.0"
]

[tool.uv]
# Range so local devs are not forced onto one weekly uv build. Reproducibility
# is preserved because docker/CI install a concrete pin and use --locked /
# --frozen. Concrete pins (docker/, .github/workflows/check_patchgen.yml)
# must stay inside this range.
required-version = ">=0.9.8,<0.12"

default-groups = ["transformers-stable"]

# The `(extra == '...')` markers are load-bearing — without them uv resolves
# torch from PyPI ignoring the +cu130/+cpu variants. Ref astral-sh/uv#11153.
override-dependencies = [
    "torch==2.11.0+cu130; (extra == 'gpu')",
    "torchaudio==2.11.0+cu130; (extra == 'gpu')",
    "torchvision==0.26.0+cu130; (extra == 'gpu')",
    "torchcodec==0.12.0; (extra == 'gpu')",
    "torch==2.7.1; (extra == 'npu_aarch64')",
    "torchaudio==2.7.1; (extra == 'npu_aarch64')",
    "torchvision==0.22.1; (extra == 'npu_aarch64')",
    # Adding explicit override for NPU backends - x86 variant (default npu)
    "torch==2.7.1+cpu; (extra == 'npu')",
    "torchaudio==2.7.1+cpu; (extra == 'npu')",
    "torchvision==0.22.1+cpu; (extra == 'npu')",
    "torchcodec>=0.4.0,<0.6.0; (extra == 'npu')",
]

conflicts = [
  [
    { extra = "gpu" },
    { extra = "npu" },
    { extra = "npu_aarch64" },
  ],
]

[tool.uv.sources]
patchgen = { path = "patchgen-pkg", editable = true }
# Direct wheel URL for gpu — pytorch index sometimes resolves cu128_full wheels
# that drop nvidia-* deps and confuse uv into uninstalling them. Update both
# 3.11 and 3.12 URLs when bumping torch.
torch = [
  { index = "pytorch", marker = "(extra == 'npu' or extra == 'npu_aarch64')" },
  { url = "https://download.pytorch.org/whl/cu130/torch-2.11.0%2Bcu130-cp311-cp311-manylinux_2_28_x86_64.whl", extra = 'gpu', marker = "python_version == '3.11'" },
  { url = "https://download.pytorch.org/whl/cu130/torch-2.11.0%2Bcu130-cp312-cp312-manylinux_2_28_x86_64.whl", extra = 'gpu', marker = "python_version == '3.12'" },
]
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
# FA2 + FA3 use prebuilt wheels hosted by @Luosuu, ABI-aligned with our
# torch 2.11.0+cu130 cxx11abi=true stack:
#   - FA2 cp311 (v0.0.3) and cp312 (v0.0.5), both sm80/89/90/100 — covers
#     Ampere/Ada/Hopper/Blackwell on NGC25.11 (cp312) and cp311 local dev.
#   - FA3 cp310-abi3 sm90 (v0.0.5) — abi3 loads on cp310+. Non-Hopper users
#     never import flash_attn_interface (lazy in
#     veomni/ops/kernels/attention/__init__.py), so sm90-only is no-loss.
# FA4 4.0.0b16 is resolved from PyPI.
flash-attn = [
    { url = "https://github.com/Luosuu/flash-attention3-wheels/releases/download/v0.0.3/flash_attn-2.8.4+20260608.cu130torch2110cxx11abitrue.bc58ab.sm80sm89sm90sm100-cp311-cp311-linux_x86_64.whl", marker = "extra == 'gpu' and python_version == '3.11'" },
    { url = "https://github.com/Luosuu/flash-attention3-wheels/releases/download/v0.0.5/flash_attn-2.8.4+20260610.cu130torch2110cxx11abitrue.fb02fc.sm80sm89sm90sm100-cp312-cp312-linux_x86_64.whl", marker = "extra == 'gpu' and python_version == '3.12'" },
]
flash-attn-3 = [
    { url = "https://github.com/Luosuu/flash-attention3-wheels/releases/download/v0.0.5/flash_attn_3-3.0.0+20260610.cu130torch2110cxx11abitrue.fb02fc.sm90-cp310-abi3-linux_x86_64.whl", marker = "extra == 'gpu'" },
]
flash-mla = [
    { url = "https://github.com/Luosuu/flash-mla-wheels/releases/download/v1.0.0-9241ae3-torch211cu130/flash_mla-1.0.0%2B9241ae3-1torch211cu130cuda131sm90asm100f-cp311-cp311-linux_x86_64.whl", marker = "extra == 'gpu' and python_version == '3.11'" },
    { url = "https://github.com/Luosuu/flash-mla-wheels/releases/download/v1.0.0-9241ae3-torch211cu130/flash_mla-1.0.0%2B9241ae3-1torch211cu130cuda131sm90asm100f-cp312-cp312-linux_x86_64.whl", marker = "extra == 'gpu' and python_version == '3.12'" },
]
# Strictly newer than v0.1.0 — picks up fixes for backward gradient count (#10),
# auto_cp UnboundLocalError (#8), and l2norm dtype preservation (#13).
flash-qla = { git = "https://github.com/QwenLM/FlashQLA", rev = "6ef4858b5446e05bd461d9658d877e548182dbcb" }

# Pinned wheels avoid FFmpeg build dep in CI. 3.11 → 14.4.0; 3.12 falls back
# to 14.2.0 (no cp312 wheel for 14.3.0/14.4.0). x86_64 only — npu_aarch64
# does not match these markers.
av = [
  { url = "https://files.pythonhosted.org/packages/f8/9a/8ffabfcafb42154b4b3a67d63f9b69e68fa8c34cb39ddd5cb813dd049ed4/av-14.4.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "(extra == 'gpu' or extra == 'npu') and python_version == '3.11'" },
  { url = "https://files.pythonhosted.org/packages/ed/e8/cf60f3fcde3d0eedee3e9ff66b674a9b85bffc907dccebbc56fb5ac4a954/av-14.2.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "(extra == 'gpu' or extra == 'npu') and python_version == '3.12'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu/"
explicit = true

# Static metadata bypasses the build hook during resolution. flash-qla has no
# pyproject.toml, so without explicit `version` uv runs its setup.py on a
# fresh (unseeded) venv and crashes with `ModuleNotFoundError: No module
# named 'setuptools'`. The `requires-dist` mirrors flash-qla's own
# install_requires — flash_qla/__init__.py top-level imports tilelang
# (which itself transitively requires apache-tvm-ffi), so any code that
# imports flash_qla (including VeOmni's lazy factory in
# veomni/ops/kernels/gated_delta_rule) needs them present, not just users
# who opt into the kernel at runtime.
# Version: flash_qla setup.py = "0.1.0".
[[tool.uv.dependency-metadata]]
name = "flash-qla"
version = "0.1.0"
requires-dist = ["torch", "tilelang==0.1.8", "apache-tvm-ffi==0.1.9"]

# Seeds the build env (uv-created venvs are not seeded by default).
[tool.uv.extra-build-dependencies]
flash-attn-4 = ["setuptools", "wheel", "packaging", "ninja", "torch"]
flash-qla = ["setuptools", "wheel", "packaging", "ninja", "torch"]

[tool.setuptools.dynamic]
version = {attr = "veomni._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
# patchgen-pkg* — sibling project, not bundled into the veomni wheel.
exclude = ["tests*", "ci*", "configs*", "veomni_patch", "tasks", "scripts", "patchgen-pkg*"]

[tool.patchgen]
search_root = "veomni/models/transformers"
package_prefix = "veomni.models.transformers"
legacy_patches_prefix = "veomni.models.transformers.qwen3.patches"

[tool.ruff]
target-version = "py311"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["B905", "C901", "E501", "E741", "W605", "C408"]
select = ["B", "C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Patch gen configs reference names from add_post_import_block (e.g. OpSlot
# instances, rotate_half) that ruff can't resolve because they only exist as
# string literals until patchgen materializes them into the generated file.
"veomni/models/transformers/**/generated/*.py" = ["E402", "B007"]
"veomni/models/transformers/**/*_patch_gen_config.py" = ["F821"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["veomni"]
known-third-party = ["torch", "transformers", "wandb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
    "qwen3_5_ulysses: Qwen3.5 GatedDeltaNet Ulysses SP tests (run when ulysses or qwen3_5 code is touched)",
]
